# function-stream

./: .codacy.yaml  .codacy.yml  .dockerignore  .gitattributes  .gitignore  .golangci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README-zh.md  README.md  apidocs.json  ci测试  config.yaml  docker-compose.yml  go.mod  go.sum  openapi.yaml  package-lock.json  package.json
.cargo/: config.toml
.chglog/: CHANGELOG.tpl.md  config.yml  gen-chg-log.sh
.github/: dependabot.yml
andv-front-end/: .env.api  .env.development  .eslintrc.js  package.json  vue.config.js
apiclient/: apiclient.go
back-end/: pom.xml
benchmark/: bench_test.go
charts/: Chart.yaml  README.md  values.yaml
cli/: README.md
cli/cli/: Cargo.toml
cli/cli/src/: main.rs  repl.rs
cli/rust-client/: Cargo.toml
cli/rust-client/src/: main.rs  repl.rs
cmd/: main.go
common/: buffer_reader.go  buffer_reader_test.go  buffer_writter.go  buffer_writter_test.go  chan_reader.go  chan_reader_test.go  chan_utils.go  chan_utils_test.go  chan_writter.go  chan_writter_test.go  closer.go  closer_test.go  config.go  constants.go  errors.go  log.go  run.go  utils.go
conf/: config.yaml  function-stream.yaml  standalone.yaml
docs/: connectors-and-formats-zh.md  connectors-and-formats.md  function-configuration-zh.md  function-configuration.md  function-development-zh.md  function-development.md  go-sdk-guide-zh.md  go-sdk-guide.md  python-sdk-guide-zh.md  python-sdk-guide.md  server-configuration-zh.md  server-configuration.md  sql-cli-guide-zh.md  sql-cli-guide.md  streaming-sql-guide-zh.md  streaming-sql-guide.md
elem/: package.json
examples/: example.yaml
examples/examples-validator/: Cargo.toml  kafka_test.rs
front-end/: .env.api  .env.development  .env.production  .eslintrc.js  .gitignore  .prettierrc.js  README.md  babel.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vue.config.js
fs/: config.go  func_ctx_impl.go  func_ctx_impl_test.go  instance.go  instance_impl.go  instance_impl_test.go  manager.go  manager_test.go  runtime.go
fsflow/: README.md  package-lock.json  package.json
fsold/: func_ctx_impl.go  func_ctx_impl_test.go  instance_impl.go  instance_impl_test.go  manager.go  manager_test.go
function-flow-manager/: generate-crd.sh  pom.xml  setting.sh
functions/: example-external.yaml  example-functions.yaml
go-sdk/: .gitignore  Makefile  fssdk.go  go.mod
go-sdk-advanced/: go.mod
lib/: config.go  core.go  event.go  event_queue.go  instance.go  manager.go  memory_queue.go  message_queue.go  message_queue_factory.go  pulsar_message_queue.go  pulsar_queue.go
license-checker/: license-checker.sh  license-header-md.txt  license-header-sh.txt  license-header.txt
operator/: DEVELOPER.md  Dockerfile  Makefile  PROJECT  README.md  TUTORIAL.md  go.mod  go.sum
perf/: perf.go
protocol/: Cargo.toml  build.rs
protocol/proto/: fs_api.proto  function_stream.proto  function_stream_graph.proto  storage.proto
protocol/src/: lib.rs
python-runtime/fs-api/: pyproject.toml
python-runtime/fs-api/src/functionstream_api/: __init__.py  context.py  driver.py
python-runtime/fs-api/src/functionstream_api/store/: error.py  iterator.py
python-runtime/fs-client/: pyproject.toml
python-runtime/fs-client/fs_client/: mocks.py  packer.py
python-runtime/fs-client/src/fs_client/: __init__.py  mocks.py
python-runtime/fs-runtime/: README.md  build.py  pyproject.toml
python-runtime/fs-runtime/fs_runtime/: __init__.py  app.py  runner.py  wit_store.py
python-runtime/fs-runtime/src/fs_runtime/: runner.py  wit_impl.py
python/functionstream-api-advanced/: pyproject.toml
python/functionstream-api-advanced/src/fs_api_advanced/: __init__.py
python/functionstream-api-advanced/src/fs_api_advanced/codec/: __init__.py  base.py  bool_codec.py  bytes_codec.py  default_codec.py  float_codec.py  int_codec.py  pickle_codec.py  string_codec.py
python/functionstream-api-advanced/src/fs_api_advanced/keyed/: __init__.py  _keyed_common.py  keyed_aggregating_state.py  keyed_list_state.py  keyed_map_state.py  keyed_priority_queue_state.py  keyed_reducing_state.py  keyed_value_state.py
python/functionstream-api-advanced/src/fs_api_advanced/structures/: __init__.py  aggregating_state.py  list_state.py  map_state.py  priority_queue_state.py  reducing_state.py  value_state.py
python/functionstream-client/: Makefile  pyproject.toml
python/functionstream-client/scripts/: codegen.py
python/functionstream-client/src/fs_client/: __init__.py  client.py  config.py  exceptions.py  models.py
python/functionstream-runtime/: Makefile  build.py  pyproject.toml
python/functionstream-runtime/src/fs_runtime/: __init__.py  runner.py
python/functionstream-runtime/src/fs_runtime/store/: __init__.py  fs_collector.py  fs_complex_key.py  fs_context.py  fs_error.py  fs_iterator.py  fs_store.py
python/functionstream-runtime/src/functionstream-runtime/: __init__.py
python/functionstream-runtime/src/functionstream-runtime/store/: fs_error.py  fs_iterator.py  fs_store.py
restclient/: README.md  api_default.go  api_function.go  api_http_tube.go  api_state.go  api_status.go  api_tube.go  client.go  configuration.go  model_function.go  model_function_runtime.go  model_function_source.go  model_model_function.go  model_model_runtime_config.go  model_model_tube_config.go  model_restfulspec_schema_type.go  model_runtime_config.go  model_server_ba.go  model_spec_external_documentation.go  response.go  (+7 more)
sdks/fs-python/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
sdks/fs-python/examples/: Dockerfile  Makefile  config.yaml  main.py  package.yaml  requirements.txt  simple_service.py  string_function.py  test_string_function.py
sdks/fs-python/fs_sdk/: __init__.py  config.py  context.py  function.py  metrics.py  module.py
sdks/fs-python/function_stream/: __init__.py  config.py  context.py  function.py  metrics.py  module.py
sdks/fs-python/tests/: conftest.py  test_config.py  test_context.py  test_function.py  test_metrics.py
(+1386 files in other folders)
