[workspace]
members = [
    ".",
    "protocol",
    "cli/cli",
]

[package]
name = "function-stream"
version = "0.6.0"
edition = "2024"

[lib]
name = "function_stream"
path = "src/lib.rs"

[[bin]]
name = "function-stream"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "2"
tonic = { version = "0.12", features = ["default"] }
async-trait = "0.1"
num_cpus = "1.0"
protocol = { path = "./protocol" }
rdkafka = { version = "0.38", features = ["cmake-build", "ssl", "gssapi"] }
crossbeam-channel = "0.5"
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4.5", features = ["derive"] }
wasmtime = { version = "41.0.3", features = ["component-model", "async"] }
base64 = "0.22"
wasmtime-wasi = "41.0.3"
rocksdb = { version = "0.21", features = ["multi-threaded-cf", "lz4"] }
bincode = "1.3"
tokio-stream = "0.1.18"
lru = "0.12"
parking_lot = "0.12"
arrow-array = "52"
arrow-ipc = "52"
arrow-schema = "52"
proctitle = "0.1"
unicase = "2.7"
petgraph = "0.7"
itertools = "0.14"
strum = { version = "0.26", features = ["derive"] }
datafusion-functions-aggregate = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}

typify = { git = 'https://github.com/ArroyoSystems/typify.git', branch = 'arroyo' }
parquet = {git = 'https://github.com/ArroyoSystems/arrow-rs', branch = '55.2.0/parquet'}
arrow-json = {git = 'https://github.com/ArroyoSystems/arrow-rs', branch = '55.2.0/json'}
datafusion = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}
datafusion-common = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}
datafusion-execution = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}
datafusion-expr = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}
datafusion-physical-expr = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}
datafusion-physical-plan = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}
datafusion-proto = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}
datafusion-functions = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}
datafusion-functions-window = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = '48.0.1/arroyo'}

sqlparser = { git = "https://github.com/FunctionStream/sqlparser-rs", branch = "0.6.0/function-sql-parser" }

cornucopia_async = { git = "https://github.com/ArroyoSystems/cornucopia", branch = "sqlite" }
cornucopia = { git = "https://github.com/ArroyoSystems/cornucopia", branch = "sqlite" }
jiter = {git = "https://github.com/ArroyoSystems/jiter", branch = "disable_python" }


[features]
default = ["incremental-cache", "python"]
incremental-cache = ["wasmtime/incremental-cache"]
python = []

[patch."https://github.com/ArroyoSystems/sqlparser-rs"]
sqlparser = { git = "https://github.com/FunctionStream/sqlparser-rs", branch = "0.6.0/function-sql-parser" }
