[workspace]
members = [
    ".",
    "protocol",
    "cli/cli",
]

[package]
name = "function-stream"
version = "0.6.0"
edition = "2024"

[lib]
name = "function_stream"
path = "src/lib.rs"

[[bin]]
name = "function-stream"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "net", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v7"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "2"
tonic = { version = "0.12", features = ["default"] }
async-trait = "0.1"
num_cpus = "1.0"
protocol = { path = "./protocol" }
prost = "0.13"
rdkafka = { version = "0.38", features = ["cmake-build", "ssl", "gssapi", "curl"] }
crossbeam-channel = "0.5"
wasmtime = { version = "41.0.3", features = ["component-model", "async"] }
base64 = "0.22"
wasmtime-wasi = "41.0.3"
rocksdb = { version = "0.21", features = ["multi-threaded-cf", "lz4"] }
bincode = { version = "2", features = ["serde"] }
chrono = "0.4"
tokio-stream = "0.1.18"
lru = "0.12"
parking_lot = "0.12"
arrow = { version = "55", default-features = false }
arrow-array = "55"
arrow-ipc = "55"
arrow-schema = { version = "55", features = ["serde"] }
parquet = "55"
futures = "0.3"
serde_json_path = "0.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
proctitle = "0.1"
unicase = "2.7"
petgraph = "0.7"
rand = { version = "0.8", features = ["small_rng"] }
itertools = "0.14"
strum = { version = "0.26", features = ["derive"] }

arrow-json = {version = '55.2.0'}
datafusion = {git = 'https://github.com/FunctionStream/datafusion', branch = '48.0.1/fs'}
datafusion-common = {git = 'https://github.com/FunctionStream/datafusion', branch = '48.0.1/fs'}
datafusion-execution = {git = 'https://github.com/FunctionStream/datafusion', branch = '48.0.1/fs'}
datafusion-expr = {git = 'https://github.com/FunctionStream/datafusion', branch = '48.0.1/fs'}
datafusion-physical-expr = {git = 'https://github.com/FunctionStream/datafusion', branch = '48.0.1/fs'}
datafusion-proto = {git = 'https://github.com/FunctionStream/datafusion', branch = '48.0.1/fs'}

sqlparser = { git = "https://github.com/FunctionStream/sqlparser-rs", branch = "0.58.0/fs" }

ahash = "0.8"
governor = "0.8.0"

[features]
default = ["incremental-cache", "python"]
incremental-cache = ["wasmtime/incremental-cache"]
python = []

[dev-dependencies]
tempfile = "3.27.0"
