[package]
name = "protocol"
version = "0.1.0"
edition = "2024"
description = "Protocol Buffers protocol definitions for function stream"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/rust-function-stream"

# prost/serde are required by generated modules under `generated/`; machete does not scan those paths.
[package.metadata.cargo-machete]
ignored = ["prost", "serde"]

[dependencies]
prost = "0.13"
tonic = { version = "0.12", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
env_logger = "0.10"
log = "0.4"
