[package]
name = "function-stream-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
arrow-array = "52"
arrow-ipc = "52"
arrow-schema = "52"
comfy-table = "7"
protocol = { path = "../../protocol" }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.0", features = ["full", "signal"] }
tonic = { version = "0.12", features = ["default"] }
rustyline = { version = "14.0", features = ["with-dirs"] }

