[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-client"
path = "src/main.rs"

[dependencies]
function-stream = { path = "../../" }
protocol = { path = "../../protocol" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.12", features = ["default"] }
rustyline = { version = "14.0", features = ["with-dirs"] }
rustyline-derive = "0.8"

