[package]
name = "examples-validator"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "kafka_test"
path = "kafka_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rdkafka = { version = "0.38", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"

