[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "functionstream-runtime"
version = "0.6.0"
description = "Function Stream Runtime - WASM kernel and WIT implementation"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
authors = [
    {name = "Function Stream Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "functionstream-api>=0.0.1",
    "cloudpickle>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fs_runtime"]

