[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "function-stream"
dynamic = ["version"]
description = "FunctionStream SDK is a powerful Python library for building and deploying serverless streaming functions that runs on Function Stream platform."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "FunctionStream Org" }
]
maintainers = [
    { name = "FunctionStream Org" }
]
keywords = ["serverless", "functions", "pulsar", "event-driven", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Networking",
]
requires-python = ">=3.9"
dependencies = [
    "pulsar-client>=3.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/functionstream/function-stream"
Documentation = "https://github.com/functionstream/function-stream/tree/main/sdks/fs-python"
Repository = "https://github.com/functionstream/function-stream"
"Bug Tracker" = "https://github.com/functionstream/function-stream/issues"
"Source Code" = "https://github.com/functionstream/function-stream"

[tool.setuptools.dynamic]
version = { attr = "function_stream.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["function_stream*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["function_stream"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
] 